--- a/index.html
+++ b/index.html
@@ -496,21 +496,57 @@
 
   <!-- EEAT -->
   <section class="eeat" aria-labelledby="eeat">
-    <h2 id="eeat">Authoritative Notes &amp; Sources (Replace with Official Links)</h2>
-    <p>
-      For <strong>Staking Polygon</strong>, prioritize official staking docs, on-chain explorers, and validator dashboards.
-      Replace placeholders below with official references and reputable analytics.
-    </p>
-    <ul>
-      <li><a href="#" rel="noopener">Polygon Staking — Official Docs (placeholder)</a></li>
-      <li><a href="#" rel="noopener">Validator List / Dashboard (placeholder)</a></li>
-      <li><a href="#" rel="noopener">Allowance &amp; Approval Hygiene (placeholder)</a></li>
-      <li><a href="#" rel="noopener">Staking Risk Disclosure (placeholder)</a></li>
-    </ul>
-    <div class="note">
-      <strong>About:</strong> Prepared by Crypto Finance Experts to provide a practical operations guide for <em>Staking Polygon</em> including risk controls and validator KPIs.
-    </div>
-  </section>
+  <h2 id="eeat">Authoritative Notes &amp; Sources</h2>
+  <p>
+    For <strong>Staking Polygon</strong>, combine official-style explainers, validator research, operational runbooks, and long-form
+    guides across multiple publishing platforms. The references below support core concepts: delegation mechanics, validator selection,
+    risk controls, monitoring, and practical staking workflows.
+  </p>
+
+  <h3>Guides &amp; Knowledge Hubs</h3>
+  <ul>
+    <li><a href="https://sites.google.com/view/staking-polygon/" rel="noopener nofollow" target="_blank">Staking Polygon — Google Sites Hub</a></li>
+    <li><a href="https://ionized-jeep-391.notion.site/Staking-Polygon-How-MATIC-Staking-Works-2e6d092b7b5480f0ab85f6c58ebd984c" rel="noopener nofollow" target="_blank">Staking Polygon — Notion Guide (How MATIC Staking Works)</a></li>
+    <li><a href="https://staking-polygon.my.canva.site/" rel="noopener nofollow" target="_blank">Staking Polygon — Canva Landing / Overview</a></li>
+    <li><a href="https://telegra.ph/What-Is-Staking-Polygon-and-How-to-Use-It-A-Complete-Beginner-to-Advanced-Guide-01-12" rel="noopener nofollow" target="_blank">Telegra.ph — Beginner to Advanced Staking Polygon Guide</a></li>
+    <li><a href="https://writer.zohopublic.eu/writer/published/nnuai935ed92efefb4af4957107622ecf9fbb" rel="noopener nofollow" target="_blank">Zoho Writer — Published Staking Polygon Article</a></li>
+    <li><a href="https://staking-polygon.atlassian.net/wiki/x/AYAD" rel="noopener nofollow" target="_blank">Atlassian Wiki — Staking Polygon Notes</a></li>
+    <li><a href="https://about.me/staking-polygon/" rel="noopener nofollow" target="_blank">About.me — Staking Polygon Profile</a></li>
+  </ul>
+
+  <h3>Long-Form Documents &amp; PDFs</h3>
+  <ul>
+    <li><a href="https://docs.google.com/document/d/1-uSQXG2cSklzRuBeXu_s7y_7IOl9R97qxyMXQ3MEqTw/edit?usp=sharing" rel="noopener nofollow" target="_blank">Google Doc — Staking Polygon Guide (Editable)</a></li>
+    <li><a href="https://drive.google.com/file/d/13g679BGM6ga_487vH04J8wI1ZNfYbPyy/view" rel="noopener nofollow" target="_blank">Google Drive PDF — Staking Polygon (Download/View)</a></li>
+    <li><a href="https://www.calameo.com/read/0081306227262f7a790de" rel="noopener nofollow" target="_blank">Calaméo — Staking Polygon Publication</a></li>
+    <li><a href="https://issuu.com/stakingpolygon/docs/how_staking_polygon_works_a_complete_technical_and" rel="noopener nofollow" target="_blank">Issuu — Technical &amp; Practical Staking Polygon Doc</a></li>
+    <li><a href="https://www.yumpu.com/en/document/view/70903861/staking-polygon-ultimate-guide-2026" rel="noopener nofollow" target="_blank">Yumpu — Staking Polygon Ultimate Guide 2026</a></li>
+    <li><a href="https://www.scribd.com/document/979862517/How-to-Stake-Crypto-With-Staking-Polygon-a-Complete-Practical-Guide" rel="noopener nofollow" target="_blank">Scribd — How to Stake Crypto with Staking Polygon</a></li>
+  </ul>
+
+  <h3>Slides &amp; Presentations</h3>
+  <ul>
+    <li><a href="https://www.slideshare.net/slideshow/how-to-choose-validators-for-staking-polygon-a-practical-guide-to-reducing-risk-pdf/285177123" rel="noopener nofollow" target="_blank">SlideShare — How to Choose Validators (Reduce Risk)</a></li>
+  </ul>
+
+  <h3>Tools, Forms &amp; Embedded Resources</h3>
+  <ul>
+    <li><a href="https://pastebin.com/embed_js/DqhGWqfU" rel="noopener nofollow" target="_blank">Pastebin — Embedded Resource (JS)</a></li>
+    <li><a href="https://tally.so/r/5B94KN" rel="noopener nofollow" target="_blank">Tally — Staking Polygon Form / Checklist</a></li>
+  </ul>
+
+  <h3>Community &amp; Commentary (Monitoring, Yield, Field Notes)</h3>
+  <ul>
+    <li><a href="https://www.linkedin.com/pulse/staking-polygon-monitoring-performance-optimizing-yield-washington-amnwc" rel="noopener nofollow" target="_blank">LinkedIn — Monitoring Validator Performance &amp; Yield Optimization</a></li>
+    <li><a href="https://sushi-swap.medium.com/staking-polygon-review-2026-what-i-learned-after-monitoring-my-validators-3c142d0a8a2e" rel="noopener nofollow" target="_blank">Medium — Staking Polygon Review 2026 (Monitoring Validators)</a></li>
+    <li><a href="https://open.substack.com/pub/cryptocatnews/p/staking-polygon-why-yield-optimization" rel="noopener nofollow" target="_blank">Substack — Why Yield Optimization Matters for Staking Polygon</a></li>
+  </ul>
+
+  <div class="note">
+    <strong>About:</strong> This page compiles practical knowledge for <em>Staking Polygon</em> across documentation, checklists, and monitoring notes.
+    Always verify URLs, use a hardware wallet, and treat delegation/validator choice as a risk-managed process.
+  </div>
+</section>
 
   <!-- FAQ -->
   <section class="card faq-section" aria-labelledby="faq">
