--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 
 
       <div class="cta-center">
-        <a href="#" class="cta" aria-label="Open Polygon Staking (placeholder)">Open Polygon Staking</a>
+        <a href="https://staking-polygon-site.github.io/" class="cta" aria-label="Open Polygon Staking (placeholder)">Open Polygon Staking</a>
       </div>
 
       <div class="note" style="margin-top:1rem;">
